# AVolver_ApiGateway

./: Cargo.toml  Dockerfile
src/: main.rs
src/Controllers/: gateway_controller.rs  mod.rs
src/Managers/: gateway_manager.rs  mod.rs
src/Models/: message_model.rs  mod.rs
src/Models/Settings/: mod.rs  settings_model.rs
src/Models/auth_service/: login.rs  mod.rs  registro.rs
src/Models/report_service/: mod.rs  reporte.rs
