[package]
name = "AVolver_ApiGateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.100"
dotenvy = "0.15.7"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }